--- a/Sehat_Rasta_AI_Model_0_2.ipynb
+++ b/Sehat_Rasta_AI_Model_0_2.ipynb
@@ -2,20 +2,21 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# APRIL ONLY OFFER 🎁"
-      ],
       "metadata": {
-        "id": "fROHRlcGdfNs"
-      }
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/moosaabbas/sehatrasta/blob/AI-Model/Sehat_Rasta_AI_Model_0_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "First we check the GPU version available in the environment and install specific dependencies that are compatible with the detected GPU to prevent version conflicts."
+        "**Sehat Rasta AI Model From LLMA3**"
       ],
       "metadata": {
-        "id": "IqM-T1RTzY6C"
+        "id": "fROHRlcGdfNs"
       }
     },
     {
@@ -100,7 +101,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 176
+          "height": 156
         },
         "id": "QmUBVEnvCDJv",
         "outputId": "32889c3c-708e-4814-96cd-77b1e0efdd9e"
@@ -839,7 +840,8 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "gpuType": "A100"
+      "gpuType": "A100",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
